3839.	[test]		Use only posix-compatible shell in system tests.
			[RT #35625]

3836.	[bug]		Address C++ keyword usage in header file.

3834.	[bug]		The re-signing heaps were not being updated soon enough
			leading to multiple re-generations of the same RRSIG
			when a zone transfer was in progress. [RT #35273]

3833.	[bug]		Cross compiling was broken due to calling genrandom at
			build time. [RT #35869]

3827.	[contrib]	The example DLZ driver (a version of which is
			also used in the dlzexternal system test) could
			use absolute names as relative. [RT #35802]

3826.	[bug]		Corrected bad INSIST logic in isc_radix_remove().
			[RT #35870]

3825.	[bug]		Address sign extension bug in isc_regex_validate.
			[RT #35758]

3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning. [RT #35858]

3822.	[bug]		Log the correct type of static-stub zones when
			removing them. [RT #35842]

3819.	[bug]		NSEC3 hashes need to be able to be entered and
			displayed without padding.  This is not a issue for
			currently defined algorithms but may be for future
			hash algorithms. [RT #27925]

3818.	[bug]		Stop lying to the optimizer that 'void *arg' is a
			constant in isc_event_allocate.

3815.	[doc]		Clarify "nsupdate -y" usage in man page. [RT #35808]

3809.	[doc]		Fix NSID documentation.

3807.	[bug]		Fix sign extention bug in dns_name_fromtext when
			lowercase is set. [RT #35743]

3806.	[test]		Improved system test portability. [RT #35625]

3805.	[contrib]	Added contrib/perftcpdns, a performance testing tool
			for DNS over TCP. [RT #35710]

3804.	[bug]		Corrected a race condition in dispatch.c in which
			portentry could be reset leading to an assertion
			failure in socket_search(). (Change #3708
			addressed the same issue but was incomplete.)
			[RT #35128]

3803.	[bug]		"named-checkconf -z" incorrectly rejected zones
			using alternate data sources for not having a "file"
			option. [RT #35685]
